# Epistemos

./: .gitignore  .swiftlint.yml  AGENTS.md  AGENT_BENCHMARKS.md  AGENT_REPLACEMENT_PLAN.md  AGENT_TEST_PLAN.md  AI_VAULT_RUNTIME_AUDIT.md  ARCHITECTURE_MAP.md  AUDIT_MATRIX.md  BEFORE_AFTER_BENCHMARKS.md  BENCHMARK_AFTER.md  BENCHMARK_BASELINE.md  CLAUDE.md  CLAUDE_IMPLEMENTATION_AUDIT_V2.md  CODEBASE_AUDIT_SYNTHESIS.md  CODEX_FULL_AUDIT_SYNTHESIS.md  CODEX_REVIEW_REPORT.md  CODE_EDITOR_FEATURE_AUDIT.md  CODE_EDITOR_GPU_AUDIT.md  CONTEXTUAL_SCALPEL_IMPLEMENTATION_PLAN.md  COZO_AUDIT.md  EPISTEMOS-NORTH-STAR.md  Epistemos-AppStore-Info.plist  Epistemos-Bridging-Header.h  Epistemos-Info.plist  FFI_AUDIT.md  FUZZ_PLAN.md  GROUND_TRUTH_SYNTHESIS.md  IMPLEMENTATION_ADVICE_SYNTHESIS.md  LOCAL_MODEL_STACK_ADVICE.md  MAMBA2_CODEX_IMPLEMENTATION_GUIDE.md  MAMBA2_PHASE1_COMPLETION.md  MAMBA2_RUNTIME_PLAN.md  MIGRATION_AND_ROLLBACK_PLAN.md  MIGRATION_PLAN.md  Makefile  NEXT_SESSION_RELEASE_SYNTHESIS_2026-04-08.md  PARSER_AUDIT.md  PERFORMANCE_DECISION_RULES.md  PERF_AUDIT.md  (+54 more)
agent_core/: Cargo.toml
agent_core/benches/: reducer_bench.rs
agent_core/docs/: CAPTURE_ROUTING_CLASSIFIER.md  EXECUTION_RECEIPT_DOCTRINE_MAPPING.md  HEAL_LOOP_SCHEMA_AND_TTL.md  TOOL_MIGRATION_STATUS.md
agent_core/eval/: route_v1.jsonl
agent_core/examples/: generate_sample_epbundle.rs
agent_core/metal/: count_sketch_update.metal  dora_apply.metal  eml_softmax_lse.metal  kv_fingerprint.metal  ternary_gemv.metal  ternary_proj_residual.metal
agent_core/schemas/: README.md  alias.v1.json  epistemos.episode.v1.schema.json  epistemos.semantic.v1.schema.json  epistemos.skill.v1.schema.json  epistemos.soul.v1.schema.json  intent.v1.json  mem.v1.json  route_capture.input.v1.json  route_capture.output.v1.json  skill.v1.json  soul.v1.json  tool_meta.v1.json
agent_core/souls/: diagnostician.soul.json  diagnostician.soul.md
agent_core/src/: agent_loop.rs  approval.rs  bootstrap.rs  bridge.rs  channel_relay.rs  circuit_breaker.rs  command_center.rs  compaction.rs  context_compiler.rs  context_loader.rs  credential_pool.rs  digest.rs  dispatcher.rs  error.rs  error_classifier.rs  event_log.rs  events.rs  example_bank.rs  lib.rs  neocortex.rs  oplog.rs  perf.rs  process_registry.rs  projection_cache.rs  prompt_caching.rs  prompts.rs  provider.rs  provider_chain.rs  pty.rs  rate_limit_tracker.rs  reasoning_metrics.rs  replay.rs  rope.rs  rope_handle.rs  routing.rs  security.rs  session.rs  session_insights.rs  session_persistence.rs  shared_memory.rs  (+5 more)
agent_core/tests/: a2ui_schemas.rs  acs_anchor_addressing.rs  active_assembly_minimal.rs  agent_runtime.rs  arena_budget.rs  canon_salvage.rs  cognition_observatory_sae.rs  controller_kernel_pack.rs  cross_ir_attention_via_closure.rs  cross_ir_geometry_to_info.rs  cross_ir_info_to_eml.rs  cross_ir_operator_to_scan.rs  cross_ir_scan_to_info.rs  cross_ir_tropical_to_eml.rs  cross_ir_tropical_to_scan.rs  effect_salvage.rs  eml_ir_corpus_round_trip.rs  eml_observatory.rs  epistemos_doctrine_lint_e2e.rs  epistemos_trace_e2e.rs  f_vault_recall_50.rs  format_salvage.rs  geometry_ir_rotor.rs  grammar_salvage.rs  heal_loop_fixtures.md  heal_salvage.rs  hermes_runtime.rs  hyperdynamic_schema_repair.rs  info_ir_logistic_mirror.rs  lattice_budget.rs  local_recall_island_32k.rs  long_context_harness.rs  mas_pro_feature_gates.rs  nightbrain_salvage.rs  operator_ir_fno_equiv.rs  packet_router_dispatch.rs  page_gather_m2pro.rs  page_gather_shadow_escalation.rs  resonance_seed.rs  route_salvage.rs  (+33 more)
bench/: Cargo.toml
bench/src/: model2vec_bench.rs  morning_session.rs
epistemos-code-index/: Cargo.toml
epistemos-code-index/src/: error.rs  lib.rs  sidecar.rs  state.rs
epistemos-core/: Cargo.toml  build.rs
epistemos-core/src/: adaptation.rs  agent_runtime.rs  compute_steering.rs  fsrs_decay.rs  inference_control.rs  lib.rs  quality_filter.rs  recovery.rs  runtime_contract.rs  ssm_state.rs  uniffi_exports.rs  vector_graph.rs
epistemos-core/tests/: sqlite_vec_knn_baseline.rs
epistemos-core/uniffi/: epistemos_core.udl
epistemos-research/: Cargo.toml
epistemos-research/src/: acs.rs  agent_swarm.rs  cargo_features.rs  cms_v2.rs  cross_domain_lens.rs  donor_distillation.rs  engram.rs  falsifier_actions.rs  five_planes.rs  gate_action.rs  goodfire_vpd_specs.rs  hardware_profile.rs  interrupt_score.rs  kv_direct_gate.rs  lane4_falsifier.rs  learning_modes.rs  lib.rs  m2_max_kernels.rs  mas_capability_lattice.rs  mathematical_pillars.rs  scientific_calculator_basis.rs  self_evolving_l_se.rs  shadow_memory.rs  sherry.rs  stack_roles.rs  ternary_kernel.rs  theorem_status.rs  ulp_compare.rs  v6_1.rs  v6_1_execution_policy.rs  v6_1_foundation.rs  v6_1_stream_surface.rs  v6_1_theorems.rs  v6_2.rs  validation_thresholds.rs  vault_categories.rs  wbo_generations.rs
epistemos-research/tests/: canonical_consistency.rs
epistemos-shadow/: Cargo.toml
epistemos-shadow/examples/: halo_budget.rs
epistemos-shadow/src/: error.rs  honest_handle.rs  lib.rs  state.rs
epistemos-vault/: Cargo.toml
epistemos-vault/src/: lib.rs
graph-engine/: Cargo.toml  generate_advanced_rust_tests.py  generate_cluster_tests.py  generate_search_tests.py  generate_spatial_tests.py  generate_tests.py
graph-engine/assets/: inter-msdf-atlas.json
graph-engine/benches/: graph_ffi_baselines.rs
graph-engine/src/: adaptive_kernels.rs  advanced_chaos_tests.rs  atmosphere.rs  bench_tests.rs  benchmark_harness.rs  bolt_bridge.rs  cluster.rs  cluster_cache.rs  cluster_hierarchy.rs  code_highlight.rs  complexity_weight.rs  comprehensive_cluster_tests.rs  comprehensive_search_tests.rs  comprehensive_simulation_tests.rs  comprehensive_spatial_tests.rs  edge_aggregation.rs  edge_case_tests.rs  edge_trim.rs  embedding.rs  engine.rs  force_kernels.rs  forces.rs  graph_tests.rs  grid_kernels.rs  hardened_race_tests.rs  label_envelope.rs  labels.rs  lib.rs  lod_renderer.rs  (+23 more)
omega-ax/: Cargo.toml  build.rs
omega-mcp/: Cargo.toml  build.rs
substrate-core/: Cargo.toml
substrate-rt/: Cargo.toml
syntax-core/: Cargo.toml
(+12618 files in other folders)
