[package]
name = "agent_core"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
mas-sandbox = []

[lib]
name = "agent_core"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
cron = "0.15"
dirs = "5.0"
eventsource-stream = "0.2"
fs2 = "0.4"
futures = "0.3"
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
globset = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
libc = "0.2"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_yaml = "0.9"
# Wave 6 base: per-frame arena allocator. Thread-local Bump per worker
# so the MCP dispatch + render hot paths can allocate scratch space
# (parsed JSON sub-trees, format buffers) without touching the system
# allocator on every call. Reset is O(1) (bump-pointer rewind).
bumpalo = { version = "3.16", features = ["collections"] }
sha2 = "0.10"
similar = "2"
tantivy = "0.22"
thiserror = "1.0"
tempfile = "3.14"
nix = { version = "0.29", features = ["process", "term", "signal", "fs"] }
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = { version = "0.5", features = ["util"] }
memchr = "2.7"
memmap2 = "0.9"
rayon = "1.10"
tracing = "0.1"
uniffi = { version = "0.28", features = ["tokio"] }
walkdir = "2.5"
which = "6.0"
uuid = { version = "1.11", features = ["serde", "v4"] }

[profile.release]
# Canonical release profile per dpp §1.1 Task 0.4 (Wave 2.4).
# SAFETY: agent_core MUST use panic = "unwind" so catch_unwind in
# bridge.rs / tools/registry.rs can intercept panics and return typed
# AgentErrorFFI to Swift instead of aborting the host process. Switching
# to "abort" would silently turn every catch_unwind into a no-op crash.
panic = "unwind"
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
debug = false
overflow-checks = false

[profile.release.package."*"]
opt-level = 3

[profile.release.build-override]
opt-level = 0

# Wave 6.1 / W6 PGO profile per dpp §6.1-6.2.
# CRITICAL: lto = "thin", NOT "fat". The Apple ld64 LTO pass discards
# the `__llvm_prf_*` PGO instrumentation sections silently when fat LTO
# is enabled — verified against rust-lang/rust#119016. Thin LTO retains
# them so the cargo-pgo cycle's profile data is preserved.
#
# Used by scripts/pgo-cycle.sh during the manual PGO sweep.
# Not active in normal release builds; the canonical [profile.release]
# above keeps lto = "fat" for non-PGO release artifacts.
[profile.release-pgo]
inherits = "release"
lto = "thin"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
