[package]
name = "agent_core"
version = "0.1.0"
edition = "2021"
publish = false

[features]
# Default = MAS build. The MAS sprint runs `cargo build` and gets the
# Mac App Store-shippable binary — no Pro-only surfaces compiled.
# Per `docs/fusion/MAS_FIRST_FOCUS_DOCTRINE_2026_05_03.md` §3.1.
default = ["mas-build"]
mas-build = []
# Pro/Developer-ID build. PART OF THE PLAN, NOT ON THE CRITICAL PATH.
# Activate with: `cargo build --no-default-features --features pro-build`.
# Pro-only surfaces (cli_passthrough, native shell/Docker/Python/Node
# subprocess, external user-installed MCP servers, iMessage osascript,
# /run, /shell, /kill, /execute) are gated behind `cfg(feature =
# "pro-build")` — invisible to MAS compilation but trivial to flip on.
pro-build = []
# T14 / T15 research surfaces (Sherry 1.25-bit ternary, ANE direct).
# Independent of pro-build so research can compose with MAS or Pro.
research = []
# V2.3 in-process LSP runtime. Hand-rolled LSP server (no tower-lsp
# dep yet — the initialize/shutdown subset is small enough that
# pulling in a framework would be net negative). When the surface
# expands to hover/definition + tree-sitter parsing in a follow-up
# slice, this feature gates the new deps so the default build stays
# light. Off by default so MAS + Pro builds that don't use LSP
# don't pay the compile cost.
lsp-runtime = []
# Legacy alias kept for compatibility with anything still referencing
# `mas-sandbox`. New code should use `mas-build`.
mas-sandbox = []

[lib]
name = "agent_core"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = "1.0"
apalis = "=1.0.0-rc.7"
apalis-sqlite = "=1.0.0-rc.7"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
# D1 — BLAKE3 Merkle chain in OpLog. Per execution map §D1 + W9.27
# PR3 the substrate stores `prev_hash: [u8; 32]` on every op so
# `epistemos-trace verify` can walk the chain and prove no op was
# tampered with. Same crate version as epistemos-core.
blake3 = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
cron = "0.15"
dirs = "5.0"
deunicode = "1.6"
eventsource-stream = "0.2"
fs2 = "0.4"
futures = "0.3"
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
globset = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
libc = "0.2"
llguidance = "1.7"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rust-stemmers = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_yaml = "0.9"
schemars = "0.8"
# Wave 6 base: per-frame arena allocator. Thread-local Bump per worker
# so the MCP dispatch + render hot paths can allocate scratch space
# (parsed JSON sub-trees, format buffers) without touching the system
# allocator on every call. Reset is O(1) (bump-pointer rewind).
bumpalo = { version = "3.16", features = ["collections"] }
sha2 = "0.10"
similar = "2"
tantivy = "0.22"
thiserror = "1.0"
tempfile = "3.14"
# W9.26 — B-tree text rope. `crop` 0.4+ with `utf16-metric` feature
# matches WKWebView's UTF-16 selection API at O(log n) cost. Used by
# the new agent_core::rope module + future Swift FFI bridge.
crop = { version = "0.4", features = ["utf16-metric"] }
# R16 — ETL crawler foundation. `ignore` is BurntSushi's gitignore-aware
# walker (used by ripgrep). `xxhash-rust` (xxh3) is the fastest non-
# cryptographic hash on Apple Silicon arm64. Apalis-sqlite lands in PR2.
ignore = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }
nix = { version = "0.29", features = ["process", "term", "signal", "fs"] }
# Tokio feature scope — trimmed from "full" (~30 features) to the minimal
# set that the codebase actually uses, verified by grep:
#   - macros: #[tokio::main] (binaries) + #[tokio::test] + tokio::select!
#   - rt: tokio::spawn, spawn_blocking, runtime::Builder
#   - time: tokio::time::{timeout, sleep}
#   - sync: tokio::sync::Mutex (no other primitives used)
#   - process: tokio::process::Command (CLI passthrough, MCP, subprocess paths)
#   - io-util: AsyncBufReadExt + AsyncWriteExt (mcp/client.rs, terminal.rs)
#   - net: tokio::net::TcpListener (channel_relay binary; reqwest needs it too)
# Dropped: signal, fs (uses std::fs), bytes, parking_lot, test-util, stats,
#          tracing, sync mpsc/oneshot/broadcast/watch, io-std (subset of io-util)
tokio = { version = "1.43", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = { version = "0.5", features = ["util"] }
memchr = "2.7"
memmap2 = "0.9"
rayon = "1.10"
tracing = "0.1"
uniffi = { version = "=0.29.5", features = ["tokio"] }
walkdir = "2.5"
which = "6.0"
uuid = { version = "1.11", features = ["serde", "v4"] }

[profile.release]
# Canonical release profile per dpp §1.1 Task 0.4 (Wave 2.4).
# SAFETY: agent_core MUST use panic = "unwind" so catch_unwind in
# bridge.rs / tools/registry.rs can intercept panics and return typed
# AgentErrorFFI to Swift instead of aborting the host process. Switching
# to "abort" would silently turn every catch_unwind into a no-op crash.
panic = "unwind"
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
debug = false
overflow-checks = false

[profile.release.package."*"]
opt-level = 3

[profile.release.build-override]
opt-level = 0

# Wave 6.1 / W6 PGO profile per dpp §6.1-6.2.
# Used by scripts/pgo-cycle.sh during the manual PGO sweep.
# Inherits the canonical release LTO setting so all release-like profiles
# satisfy the single Epistemos release profile contract.
[profile.release-pgo]
inherits = "release"

[build-dependencies]
uniffi = { version = "=0.29.5", features = ["build"] }
