[package]
name = "epistemos-code-index"
version = "0.1.0"
edition = "2024"
publish = false
description = "Workspace code indexer — RAG chunking + Model2Vec embeddings + usearch HNSW sidecar. Per-file sidecar lives at <vault>/.epcache/code/<sha256-hex-of-vault-rel-path>.epcode.json (path-hash, NOT body-hash; identical to Swift CodeSidecarPath). Wave 9.7."

[lib]
name = "epistemos_code_index"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Light deps for the W9.7 base scaffold. The full backend (usearch
# 2.25 + Model2Vec encoder + tree-sitter symbol extractor) lands in
# the W9.7 follow-up once the surface + tests + agent-grep API
# (W9.9) are green. Splitting keeps W9.7 base build under 30 s.
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]

[profile.release]
# Canonical Wave 2.4 release profile. panic = "unwind" because the
# C ABI surface (codeindex_*) wraps every entry in std::panic::catch_unwind.
panic = "unwind"
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
debug = false
overflow-checks = false
