[package]
name = "epistemos-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "epistemos_core"

[dependencies]
uniffi = { version = "0.28", features = ["cli", "bindgen"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
bm25 = "2"
notify = "6"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"
unicode-normalization = "0.1"
libc = "0.2"
tokio = { version = "1", features = ["rt", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
walkdir = "2"
rand = "0.8"
encoding_rs = "0.8"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"
