[package]
name = "epistemos-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "epistemos_core"

[dependencies]
uniffi = { version = "0.28", features = ["cli", "bindgen"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
bm25 = "2"
notify = "6"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"
unicode-normalization = "0.1"
libc = "0.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
walkdir = "2"
rand = "0.8"
encoding_rs = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"

# Quantization & concurrency (Tier 1-3)
crossbeam-epoch = "0.9"
crossbeam-utils = "0.8"
bitvec = { version = "1", features = ["serde"] }
half = { version = "2.3", features = ["std"] }
memmap2 = "0.9"
rayon = "1.8"
bincode = "1"
parking_lot = "0.12"

[features]
default = []
diet_experiment = []
dip_experiment = []
learned_mask_predictor = []
experimental_main_adapt = []

[dev-dependencies]
tempfile = "3"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"
