[package]
name = "epistemos-research"
version = "0.1.0"
edition = "2021"
publish = false

# HELIOS V5 Lane 3 (Research) workspace member.
#
# Per docs/HELIOS_V5_INTEGRATION_PLAN_v2_2026_05_05.md §1 + §3 W17/W18/W19:
#
#   "Lane 3 RESEARCH_FRONTIER — VPD extraction + Dual Connectome
#    Trace + ParamAnchor + QK Edge Anchor + ParamAttributionGraph +
#    ComponentRoute. JIT permitted."
#
# Hosts:
#   * vpd/        — Goodfire-style Variational Parameter Decomposition
#                  (PCF-1..PCF-3, PCF-7, PCF-8)
#   * theorems/   — E1-E7 Epistemos Core Theorem substrate types
#                  (Chart6, CellularSheaf, MorphField, Epi_eps,
#                  AutogenousKernel)
#   * acs/        — Anchored Cognitive Substrate / CMS-X v3 lifts
#                  from HELIOS v4 source_docs
#
# §2.5.2 compliance posture: Lane 3 is research-only. NEVER ships in
# MAS. Build with --features research; the default build excludes
# the crate from any MAS-distributed binary.

[features]
default = []
# Lane 3 research feature gate. Activate with:
#   cargo build --features research
research = []

[lib]
name = "epistemos_research"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
