[package]
name = "epistemos-vault"
version = "0.1.0"
edition = "2021"
publish = false

# HELIOS V5 Lane 5 (SPECULATIVE_VAULT) workspace member.
#
# Per docs/HELIOS_V5_INTEGRATION_PLAN_v2_2026_05_05.md §1 + §3
# W20+W21+W22 + DOC 0 §0.4:
#
#   "Lane 5 SPECULATIVE_VAULT — HCache/KVCrush, ModelSurgery
#    (PCF-6), Active Rank-One Runtime (PCF-5), Connectome
#    Distillation (T34/PCF-9). Builds with `vault` Cargo feature;
#    never ships outside Lane 5 distribution."
#
# §2.5.2 compliance posture: Lane 5 is **vault-only**. NEVER ships
# in MAS. Builds with --features vault; default build excludes the
# crate from any MAS-distributed binary.
#
# Distribution channel: Vault (separate from MAS / Pro / Research).
# Per HELIOS_V5_INTEGRATION_PLAN_v2_FINALIZE_2026_05_05.md §Q —
# "Vault crate (W20-W22) builds in separate distribution channel
#  with no MAS dependency."

[features]
default = []
# Lane 5 vault feature gate. Activate with:
#   cargo build --features vault
vault = []

[lib]
name = "epistemos_vault"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
