[package]
name = "graph-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
cozo = "0.7.6"
metal = "0.31"
memchr = "2.7"
objc = "0.2"
parking_lot = "0.12"
rayon = "=1.10.0"
rkyv = { version = "0.8.15", features = ["std"] }
rustc-hash = "2.1"
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = { version = "0.12", default-features = false }
fst = { version = "0.4", features = ["levenshtein"] }
tree-sitter = "0.25"
tree-sitter-language = "0.1"
tree-sitter-swift = "0.7"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-json = "0.24"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-bash = "0.25"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"

[profile.release]
opt-level = 3
lto = "thin"
