[package]
name = "graph-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "rlib"]

[features]
default = []
bolt-graph = []
shared-position-buffers = []

[dependencies]
block = "0.1"
bytemuck = "1.24"
cozo = "0.7.6"
libc = "0.2"
loro = "1.10"
metal = "0.31"
memchr = "2.7"
objc = "0.2"
orgize = "0.9"
parking_lot = "0.12"
rand = "0.8"
rkyv = { version = "0.8.15", features = ["std"] }
rustc-hash = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1.13"
pulldown-cmark = { version = "0.12", default-features = false }
fst = { version = "0.4", features = ["levenshtein"] }
tree-sitter = "0.25"
tree-sitter-language = "0.1"
tree-sitter-swift = "0.7"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-json = "0.24"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-bash = "0.25"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
usearch = "2.24"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "graph_ffi_baselines"
harness = false

[profile.release]
# Canonical release profile per dpp §1.1 Task 0.4 (Wave 2.4).
# SAFETY: graph-engine MUST use panic = "unwind". src/lib.rs,
# src/markdown.rs, src/bolt_bridge.rs, and src/engine.rs all wrap
# every FFI entry point in std::panic::catch_unwind via the
# `ffi_catch_unwind!` / `ffi_catch_unwind_or!` macros so a Rust
# panic returns a safe sentinel to Swift. With panic = "abort" the
# whole process would terminate before catch_unwind ever ran.
panic = "unwind"
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
debug = false
overflow-checks = false

[profile.release.package."*"]
opt-level = 3

[profile.release.build-override]
opt-level = 0
