[package]
name = "omega-ax"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "omega_ax"

[dependencies]
uniffi = { version = "=0.29.5", features = ["cli", "bindgen"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
core-foundation = "0.10"
core-graphics = "0.24"

[build-dependencies]
uniffi = { version = "=0.29.5", features = ["build"] }

[profile.release]
# Canonical release profile per dpp §1.1 Task 0.4 (Wave 2.4).
# SAFETY: omega-ax MUST use panic = "unwind" because
# uniffi_exports::ax_tree_walk wraps the AX tree walker in
# std::panic::catch_unwind and falls back to a sparse snapshot if
# the system AX query panics. panic = "abort" would silently abort
# the host process whenever an AX call faults.
panic = "unwind"
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
debug = false
overflow-checks = false

[profile.release.package."*"]
opt-level = 3

[profile.release.build-override]
opt-level = 0
