[package]
name = "omega-mcp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "omega_mcp"

[features]
default = []
# When enabled, gates out PTY + osascript modules so the MAS-linked
# libomega_mcp.dylib ships zero `nix::pty`, `nix::unistd::Fork*`,
# `std::process::Command`, or `openpty` symbols. UniFFI surface stays
# (Swift bindings unchanged) but the gated wrappers return an inert
# "unavailable in this build" JSON.
mas-sandbox = []

[dependencies]
uniffi = { version = "0.28", features = ["cli", "bindgen"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.29", features = ["process", "term", "signal", "fs"] }
uuid = { version = "1", features = ["v4", "serde"] }
memmap2 = "0.9"
rayon = "1.10"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[profile.release]
# Canonical release profile per dpp §1.1 Task 0.4 (Wave 2.4).
# omega-mcp does NOT call std::panic::catch_unwind anywhere, so
# panic = "abort" is safe here and yields the smallest dylib by
# stripping the unwind tables.
panic = "abort"
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
debug = false
overflow-checks = false

[profile.release.package."*"]
opt-level = 3

[profile.release.build-override]
opt-level = 0
