[package]
name = "omega-mcp"
version = "0.1.0"
edition = "2021"

[lib]
# rlib added (Wave 2.6) so internal Rust binaries — notably the
# bench/ morning-session workload that produces runtime metrics for
# docs/perf-budgets.toml — can depend on omega-mcp via a path dep.
# Additive: cdylib (UniFFI Swift bridge) and staticlib (link into
# the macOS app) keep their existing outputs untouched.
crate-type = ["cdylib", "staticlib", "rlib"]
name = "omega_mcp"

[features]
default = []
# When enabled, gates out PTY + osascript modules so the MAS-linked
# libomega_mcp.dylib ships zero `nix::pty`, `nix::unistd::Fork*`,
# `std::process::Command`, or `openpty` symbols. UniFFI surface stays
# (Swift bindings unchanged) but the gated wrappers return an inert
# "unavailable in this build" JSON.
mas-sandbox = []

[dependencies]
uniffi = { version = "=0.29.5", features = ["cli", "bindgen"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
schemars = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
nix = { version = "0.29", features = ["process", "term", "signal", "fs"] }
uuid = { version = "1", features = ["v4", "serde"] }
memmap2 = "0.9"
rayon = "1.10"
blake3 = "1"
# Wave 6.2 follow-up: bumpalo per-frame arena for the dispatch hot
# path. Thread-local Bump per worker (canonical 2026 pattern per
# Wave 6 research finding); reset is O(1) bump-pointer rewind.
bumpalo = { version = "3.16", features = ["collections"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
uniffi = { version = "=0.29.5", features = ["build"] }

[profile.release]
# Canonical release profile per dpp §1.1 Task 0.4 (Wave 2.4).
# omega-mcp does NOT call std::panic::catch_unwind anywhere, so
# panic = "abort" is safe here and yields the smallest dylib by
# stripping the unwind tables.
panic = "abort"
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
debug = false
overflow-checks = false

[profile.release.package."*"]
opt-level = 3

[profile.release.build-override]
opt-level = 0
