[package]
name = "substrate-core"
version = "0.1.0"
edition = "2021"
publish = false
description = "Canonical entity store + AppAction event log. Rust owns the truth; Swift projects."

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
slotmap = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"

[profile.release]
# Canonical release profile per dpp §1.1 Task 0.4 (Wave 2.4).
# substrate-core does NOT call std::panic::catch_unwind anywhere,
# so panic = "abort" is safe here and yields the smallest static
# library by stripping the unwind tables.
panic = "abort"
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
debug = false
overflow-checks = false

[profile.release.package."*"]
opt-level = 3

[profile.release.build-override]
opt-level = 0
